--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -14,10 +14,11 @@
   background-color: rgba($color-black, 0.3);
 
   //Check browser support
-  @supports(-webkit-backdrop-filter: blur(10px)) or (background-color: rgba($color-black, 0.3)) {
+  @supports (-webkit-backdrop-filter: blur(10px)) or
+    (background-color: rgba($color-black, 0.3)) {
     -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-  background-color: rgba($color-black, 0.3);
+    backdrop-filter: blur(10px);
+    background-color: rgba($color-black, 0.3);
   }
 
   &__content {
@@ -33,7 +34,7 @@
     display: table;
     overflow: hidden;
     opacity: 0;
-    transition: all .5s;
+    transition: all 0.5s;
   }
 
   &__left {
@@ -97,6 +98,23 @@
 
     &:hover {
       color: $color-primary;
+    }
+  }
+
+  @media only screen and (max-width: 37.5em) {
+    .popup__content {
+      display: inline-block;
+    }
+  }
+
+  @media only screen and (max-width: 37.5em) {
+    .popup__left {
+      display: inline-flex;
+      position: relative;
+      right:7.5rem;
+      margin-top: 3rem;
+      margin-bottom:1rem;
+      width: 25%;
     }
   }
 }
